fix responsive issue on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1093,16 +1093,6 @@
   transform: translate(-50%, -50%);
 }
 
-/* Responsive: slightly smaller icons on narrow screens */
-@media (max-width: 640px) {
-  .xpStage {
-    height: 240px;
-  }
-
-  .xpIcon {
-    --size: 56px;
-  }
-}
 
 
 
@@ -1128,11 +1118,11 @@
     height: 240px;
   }
 
-  .sttPillLeft,
+  /* .sttPillLeft,
   .sttPillRight {
     width: 130px;
     height: 200px;
-  }
+  } */
 }
 
 /* responsive adjustments */
@@ -1224,6 +1214,17 @@
     font-size: 46px;
   }
 
+  .bTopRight{
+    right: -16px;
+  }
+  .bBottomRight{
+    right: -23px;
+  }
+
+  .bBottomLeft{
+    left: -23px;
+  }
+
   .ctaRow {
     flex-direction: column;
     width: 100%;
@@ -1239,7 +1240,13 @@
   }
 
   .howSection {
-    padding: 40px 1rem 0;
+    padding: 0px;
+  }
+
+  .howCard {
+    width: 100%;
+    max-width: 400px;
+    height: 580px;
   }
 
   .howGrid {
@@ -1250,6 +1257,14 @@
 
   .orbRing {
     height: 80%;
+  }
+
+  .conversationWave {
+    min-height: 300px;
+  }
+
+  .conversationWrap {
+    bottom: 20%;
   }
 
   .rapidscreenGrid {
@@ -1276,6 +1291,31 @@
     margin: 8px auto 0;
   }
 
+  .xpStage {
+    height: 180px;
+  }
+
+  .xpIcon {
+    --size: 56px;
+  }
+
+  .xpChat {
+    /* --to: 12%;
+    --mid: 8%; */
+    left: 9%;
+    top: -25%;
+  }
+
+  .xpWeb{
+    top: 60%;
+    left: -75%;
+  }
+
+  .xpPhone{
+    top: 10%;
+    left: -153%;
+  }
+
   .footer {
     padding: 26px 1rem 0px;
   }
@@ -1296,7 +1336,7 @@
   }
 
   .footerWatermark {
-    font-size: 6rem;
+    font-size: 5rem;
     bottom: 0;
   }
 }
@@ -1318,6 +1358,10 @@
     padding: 28px;
   }
 
+  .orbRing {
+    height: 70%;
+  }
+
   .howSubheadline {
     font-size: 18px;
   }
@@ -1332,6 +1376,11 @@
 
   .rapidscreenSubtitle {
     font-size: 20px;
+  }
+
+  .footerWatermark {
+    font-size: 4.5rem;
+    bottom: 0;
   }
 }
 
